[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
actix-web = "4.3.1"
epoll = { path = "../epoll" }
mio = { version = "0.8.8", features = ["net", "os-poll"] }

[[example]]
name = "delayserver"
path = "delayserver.rs"

[[example]]
name = "epoll"
path = "epoll.rs"

[[example]]
name = "epoll_mio"
path = "epoll_mio.rs"

[[example]]
name = "stack_swap"
path = "stack_swap.rs"

[[example]]
name = "show_stack"
path = "show_stack.rs"

[[example]]
name = "fibers"
path = "fibers.rs"
