[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
actix-web = "4.3.1"
coroutine = { path = "../coroutine" }
epoll = { path = "../epoll" }
mio = { version = "0.8.8", features = ["net", "os-poll"] }
runtime = { path = "../runtime" }
runtime-executor = { path = "../runtime-executor" }
coroutines-variables = { path = "../coroutines-variables" }
coroutines-pin = { path = "../coroutines-pin" }

[[example]]
name = "delayserver"
path = "delayserver.rs"

[[example]]
name = "epoll"
path = "epoll.rs"

[[example]]
name = "epoll_mio"
path = "epoll_mio.rs"

[[example]]
name = "stack_swap"
path = "stack_swap.rs"

[[example]]
name = "show_stack"
path = "show_stack.rs"

[[example]]
name = "fibers"
path = "fibers.rs"

[[example]]
name = "fibers_closure"
path = "fibers_closure.rs"

[[example]]
name = "coroutine"
path = "coroutine.rs"

[[example]]
name = "runtime"
path = "runtime.rs"

[[example]]
name = "runtime1"
path = "runtime1.rs"

[[example]]
name = "runtime_executor"
path = "runtime_executor.rs"

[[example]]
name = "coroutines_variables"
path = "coroutines_variables.rs"

[[example]]
name = "pin"
path = "pin.rs"

[[example]]
name = "coroutines_pin"
path = "coroutines_pin.rs"
